# hs-error-utils

./: README.md  cabal.project
fail-utils/: CHANGELOG.md  bb.edn  fail-utils.cabal
fail-utils/src/Control/Monad/Fail/: Utils.hs
fail-utils/test/: UriExample.hs
fail-utils/test/Control/Monad/Fail/: UtilsSpec.hs
fused-error-utils/: CHANGELOG.md  bb.edn  fused-error-utils.cabal
fused-error-utils/src/Control/Carrier/Fail/: Utils.hs
fused-error-utils/src/Control/Carrier/Throw/: Utils.hs
fused-error-utils/test/Control/Carrier/Fail/: UtilsSpec.hs
